opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://www.github.com/stevebleazard/ocaml-jsonxt"
bug-reports: "https://www.github.com/stevebleazard/ocaml-jsonxt/issues"
license: "MIT"
dev-repo: "https://www.github.com/stevebleazard/ocaml-jsonxt.git"
doc: "https://stevebleazard.github.io/ocaml-jsonxt/"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
  "jbuilder"  {build}
]

available: [ ocaml-version >= "4.03.0" ]
