opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://www.github.com/stevebleazard/ocaml-jsonxt"
bug-reports: "https://www.github.com/stevebleazard/ocaml-jsonxt/issues"
license: "MIT"
dev-repo: "https://www.github.com/stevebleazard/ocaml-jsonxt.git"
doc: "https://stevebleazard.github.io/ocaml-jsonxt/"
synopsis: "JSON parsers parsers for string, files and more"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "ocaml"               {>= "4.05.0"}
  "dune"                {build}
  "alcotest"            {with-test}
  "cmdliner"            {with-test}
  "core_kernel"         {with-test}
  "fmt"                 {with-test}
]
  #"core"                {with-test}
  #"ocaml"               {>= "4.08.1"}
