(ocamllex lex_test)

(tests
 (modes byte exe)
 (names test_parser perf_test test_yojson compliance_tester lex_test test_parser_stream test_parser_stream_writer)
 (libraries yojson core core_bench jsonxt))

(alias
 (name compliance_tests)
 (deps compliance_tester.exe))

;(alias
; (name default)
; (deps test_parser.exe))
