(executables
 (names jxtester)
 (preprocess (pps ppx_sexp_conv))
 (libraries jsonxt core_kernel alcotest cmdliner fmt))

(rule
 (alias compliance_tests)
 (deps jxtester.exe (glob_files ../data/*))
 (action (chdir ../data (run ../core/jxtester.exe compliance -t ./compliance_tests.list))))

(rule
 (alias validation_tests)
 (deps jxtester.exe (glob_files ../data/json_tests.list))
 (action (run ./jxtester.exe validation run -t ../data/json_tests.list)))

(alias
 (name runtests)
 (deps (alias compliance_tests) (alias validation_tests)))
